@@ -1,7 +1,6 @@
 /* $Id$ */
-#include "synce.h"
 
-#if IMPLEMENT_BSWAP_XX
+#include "synce.h"
 
 /*
  * Written by Manuel Bouyer <bouyer@netbsd.org>.
@@ -20,6 +19,4 @@ uint32_t bswap_32(uint32_t x)
 		((x >>  8) & 0x0000ff00 ) |
 		((x >> 24) & 0x000000ff );
 }
-
-#endif
 
