@@ -92,41 +92,57 @@ LPWSTR wstrdup(LPCWSTR string);
  * Endian conversions
  */
 
-#if !defined(htole32) || !defined(htole16) || !defined(letoh16) || !defined(letoh32)
+#if !defined(htole32) || !defined(htole16) || !defined(letoh16) || !defined(letoh32) || !defined(htobe32) || !defined(htobe16) || !defined(betoh16) || !defined(betoh32)
 #undef htole16
 #undef htole32
 #undef letoh16
 #undef letoh32
+#undef htobe16
+#undef htobe32
+#undef betoh16
+#undef betoh32
 
-/* define host-to-little-endian and little-endian-to-host macros */
-#if @WORDS_BIGENDIAN@
+#define SYNCE_HOST_BIGENDIAN @WORDS_BIGENDIAN@
+#define HAVE_BYTESWAP_HEADER @HAVE_BYTESWAP_HEADER@
 
-/* byte swapping */
-#if @HAVE_BYTESWAP_HEADER@
+/* byte swapping functions */
+
+#if HAVE_BYTESWAP_HEADER
 #include <@BYTESWAP_HEADER@>
 #else
-#define IMPLEMENT_BSWAP_XX  1
 uint16_t bswap_16(uint16_t x);
 uint32_t bswap_32(uint32_t x);
-#endif
+#endif /* HAVE_BYTESWAP_HEADER */
 
-/* Use bswap_xx */
 
-#define htole16(x)		bswap_16(x)
-#define htole32(x)		bswap_32(x)
+/* define host-to-little-endian and little-endian-to-host macros */
+
+#if SYNCE_HOST_BIGENDIAN
+
+#define htole16(x)    bswap_16(x)
+#define htole32(x)    bswap_32(x)
 #define letoh16(x)    bswap_16(x)
 #define letoh32(x)    bswap_32(x)
 
-#else
+#define htobe16(x)    (x)
+#define htobe32(x)    (x)
+#define betoh16(x)    (x)
+#define betoh32(x)    (x)
 
-/* Empty macros */
+#else /* HOST_LITTLE_ENDIAN */
 
-#define htole16(x)		(x)
-#define htole32(x)		(x)
+#define htole16(x)    (x)
+#define htole32(x)    (x)
 #define letoh16(x)    (x)
 #define letoh32(x)    (x)
 
-#endif
+#define htobe16(x)    bswap_16(x)
+#define htobe32(x)    bswap_32(x)
+#define betoh16(x)    bswap_16(x)
+#define betoh32(x)    bswap_32(x)
+
+#endif /* SYNCE_HOST_BIGENDIAN */
+
 #endif
 
 
